css overflow and animaiton fix

--- a/client/src/styles/songs.scss
+++ b/client/src/styles/songs.scss
@@ -12,7 +12,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  overflow: auto;
 }
 .song-list-image{
     align-items: center;
@@ -102,20 +101,20 @@
 
  .size-sm .song-list-item:not(.is-loading):hover {
   .song-list-image{
-    margin: -75px 0 0 -75px; 
+    margin: 0 0 0 -75px; 
   }
   .song-list-item-data{
     left: -75px;
-    top: 75px;
+    top: 150px;
   }
 }
 .size-md .song-list-item:not(.is-loading):hover {
   .song-list-image{
-    margin: -50px 0 0 -50px;
+    margin: 0 0 0 -50px;
   }
   .song-list-item-data{
     left: -50px;
-    top: 100px;
+    top: 150px;
   }
 }
 .size-lg .song-list-item:not(.is-loading):hover {
@@ -124,6 +123,6 @@
   }
   .song-list-item-data{
     left: -5px;
-    top: 125px;
+    top: 150px;
   }
 }
